<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DeliverOneActivity"
    android:background="@color/ivory">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <TextView
            android:id="@+id/box_number"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/box_number"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/input_box_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left"
            android:hint="@string/notice3"/>
    </LinearLayout>

    <Button
        android:id="@+id/input_box_number_next"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorAccent"
        android:onClick="onDeliverTwo"
        android:text="@string/input_box_number_next"
        android:textColor="@android:color/white" />
</LinearLayout>